<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="351dp"
            android:layout_height="85dp"
            android:text="@string/registratiTitle"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="200dp"
            android:layout_height="53dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress|textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="190dp"
        android:layout_height="53dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="11dp"
        android:text="@string/sei_gi_registrato"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/registratiBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tvLoginClick"
            android:text="@string/login"
            android:textColor="@color/yellow_dark"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911" />

        <Button
            android:id="@+id/registratiBtn"
            android:layout_width="203dp"
            android:layout_height="46dp"
            android:onClick="registratiBtnClick"
            android:text="@string/registratiBtn"
            android:textColor="#040303"
            app:backgroundTint="#C5BDBD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.724" />

    <View
        android:id="@+id/view4"
        android:layout_width="328dp"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow_dark"
        app:layout_constraintBottom_toTopOf="@+id/registratiBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <View
            android:id="@+id/view6"
            android:layout_width="327dp"
            android:layout_height="2dp"

            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:background="@color/yellow_dark"
            app:layout_constraintBottom_toTopOf="@+id/regPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/regNome"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view5"
            android:layout_width="336dp"
            android:layout_height="2dp"
            android:layout_marginBottom="28dp"
            android:background="@color/yellow_dark"
            app:layout_constraintBottom_toTopOf="@+id/regPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="176dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/icona_email"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            app:layout_constraintEnd_toStartOf="@+id/regEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_email"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/icona_lock"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/regPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_lock"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="199dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/e_potrai_usufruire_servizi"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/regNome"
            android:layout_width="200dp"
            android:layout_height="51dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="37dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toStartOf="@+id/regNome"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.794"
            app:srcCompat="@drawable/ic_people"
            android:contentDescription="@string/icona_people"
            tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>